<resources>
    <string name="app_name">AfterHours</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>


    <string name="snack_bar_confirmation_text">確定刪除本地端的資料並重新從證交所抓取盤後資料嗎？</string>
    <string name="snack_bar_confirm_text">確定</string>
    <string name="title_share_id">證券代號</string>
    <string name="title_share_name">證券名稱</string>
    <string name="title_share_qty">成交股數</string>
    <string name="title_share_start_price">開盤價</string>
    <string name="title_share_end_price">收盤價</string>



    <string name="header_communication_mode_1">下一次的資料取得，將以 Retrofit2 + RxJava 網路通信</string>
    <string name="header_communication_mode_2">下一次的資料取得，將以 HttpUrlConnection 網路通信</string>
    <string name="header_communication_mode_1_is_loading">Retrofit + RxJava: data is loading..</string>
    <string name="header_communication_mode_2_is_loading">HttpURLConnection: data is loading..</string>
    <string name="header_communication_connection_error">Oops!請檢查網路連線..</string>
    <string name="communication_connection_onLost">網路連線異常..</string>

</resources>
