<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/button_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/shareIdTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_share_id"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/shareNameTv"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shareNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/shareQtyTv"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/shareIdTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_name" />

        <TextView
            android:id="@+id/shareQtyTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/shareStartPriceTv"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@+id/shareNameTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_qty" />

        <TextView
            android:id="@+id/shareStartPriceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/shareEndPriceTv"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/shareQtyTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_start_price" />

        <TextView
            android:id="@+id/shareEndPriceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/shareStartPriceTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_end_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Spare button-->
    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/headerBar"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/StockInfoList_Rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBar" />
</androidx.constraintlayout.widget.ConstraintLayout>