<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_control_panel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <Switch
            android:id="@+id/communicationModeSw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/communicationModeTv"/>

        <TextView
            android:id="@+id/communicationModeTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:maxLines="2"
            android:text="@string/header_communication_mode_1"
            android:textSize="12sp"
            android:textColor="@color/colorAccentDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/communicationModeSw"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/headerBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header_control_panel"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="8dp" >

        <TextView
            android:id="@+id/shareIdTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/title_share_id"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/shareNameTv"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shareNameTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/shareQtyTv"
            app:layout_constraintHorizontal_weight="5"
            app:layout_constraintStart_toEndOf="@+id/shareIdTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="center"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_name" />

        <TextView
            android:id="@+id/shareQtyTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            app:layout_constraintEnd_toStartOf="@+id/shareStartPriceTv"
            app:layout_constraintHorizontal_weight="4"
            app:layout_constraintStart_toEndOf="@+id/shareNameTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_qty" />

        <TextView
            android:id="@+id/shareStartPriceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/shareEndPriceTv"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/shareQtyTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_start_price" />

        <TextView
            android:id="@+id/shareEndPriceTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="3"
            app:layout_constraintStart_toEndOf="@+id/shareStartPriceTv"
            app:layout_constraintTop_toTopOf="parent"
            android:textAlignment="viewEnd"
            android:textSize="12sp"
            android:textStyle="bold"
            android:text="@string/title_share_end_price" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/StockInfoList_Rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:scrollbars="vertical"
        app:layoutManager="LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerBar" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_cloud_download_white_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>